--- a/public-app/src/styles/styles.scss
+++ b/public-app/src/styles/styles.scss
@@ -1,5 +1,7 @@
 $dark-primary: #121212;
+$dark-secondary: #30475E;
 $light-primary: #F5F5F5;
+$light-secondary: #ddd;
 $active-primary: #F05454;
 
 html{
