--- a/public-app/src/styles/styles.scss
+++ b/public-app/src/styles/styles.scss
@@ -44,6 +44,7 @@ button.button-primary{
 input[type=text],
 input[type=password],
 input[type=email],
+input[type=date],
 input.input-primary{
   width: 207px;
   outline: none;
