--- a/public-app/src/styles/styles.scss
+++ b/public-app/src/styles/styles.scss
@@ -45,6 +45,7 @@ input[type=text],
 input[type=password],
 input[type=email],
 input[type=date],
+input[type=search],
 input.input-primary{
   width: 207px;
   outline: none;
