--- a/public-app/src/styles/styles.scss
+++ b/public-app/src/styles/styles.scss
@@ -55,8 +55,12 @@ input[type=text],
 input[type=password],
 input[type=email],
 input[type=date],
+input[type=time],
 input[type=search],
-input.input-primary{
+input.input-primary,
+select.select-primary,
+textarea.textarea-primary,
+label.input-file-label{
   width: 207px;
   outline: none;
   background-color: $light-primary;
@@ -65,6 +69,36 @@ input.input-primary{
   padding:6px 10px;
   border-radius: 10px;
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+}
+
+input[type=time]{
+  width: auto;
+}
+
+label.input-file-label{
+  width: auto;
+  cursor: pointer;
+}
+label.input-file-label input[type=file]{
+  display: none;
+}
+
+select.select-primary{
+  height:36px;
+  padding:6px 8px;
+  cursor: pointer;
+  option{
+    background-color: $light-primary; 
+  }
+}
+
+textarea,
+textarea.textarea-primary{
+  padding: 6px;
+  max-height: 300px;
+  height: 100px;
+  min-height: 100px;
+  width: auto;
 }
 
 .nohighlight {
