--- a/public-app/src/styles/styles.scss
+++ b/public-app/src/styles/styles.scss
@@ -126,3 +126,7 @@ textarea.textarea-primary{
   margin-left:auto;
   margin-right:auto;
 }
+
+.leaflet-control-attribution.leaflet-control{
+  display: none;
+}
